hphp/hack/test/typecheck/reactive/print_in_rx8_3.php.exp
File "print_in_rx8_3.php", line 9, characters 5-11:
'echo' or 'print' are not allowed in reactive functions. (Typing[4226])
